# epic-eval

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  allocator.h  base_index.h  base_record.h  common.h  cpu_auxiliary_range_index.cpp  cpu_auxiliary_range_index.h  execution_planner.h  gpu_allocator.cu  gpu_allocator.h  gpu_configuration.cu  gpu_execution_planner.cu  gpu_execution_planner.cuh  gpu_execution_planner.h  gpu_hashtable_index.cu  gpu_hashtable_index.h  gpu_storage.cuh  gpu_txn.cu  gpu_txn.cuh  gpu_txn.h  gpu_txn_bridge.cu  gpu_txn_bridge.cuh  hashtable_index.h  main.cpp  micro_driver.cu  notes.md  notes.txt  parse_expriments.py  pver_copyer.cu  pver_copyer.cuh  record.h  run_experiments.py  scratch.txt  std_map_index.h  std_unordered_map_index.h  storage.h  (+29 more)
benchmarks/: benchmark.h  gpu_ycsb.cu  gpu_ycsb.cuh  micro.cu  micro.h  micro_config.h  micro_executor.h  micro_index.h  micro_storage.h  micro_submitter.h  micro_txn.h  tpcc.cpp  tpcc.h  tpcc_common.h  tpcc_config.h  tpcc_cpu_aux_index.h  tpcc_cpu_executor.cpp  tpcc_cpu_executor.h  tpcc_executor.h  tpcc_gpu_aux_index.cu  tpcc_gpu_aux_index.h  tpcc_gpu_executor.cu  tpcc_gpu_executor.h  tpcc_gpu_index.cu  tpcc_gpu_index.h  tpcc_gpu_submitter.cu  tpcc_gpu_submitter.h  tpcc_gpu_table.cuh  tpcc_gpu_txn.cu  tpcc_gpu_txn.cuh  tpcc_index.cpp  tpcc_index.h  tpcc_pver_copyer.cu  tpcc_pver_copyer.h  tpcc_storage.h  tpcc_submitter.h  tpcc_table.h  tpcc_txn.cpp  tpcc_txn.h  tpcc_txn_gen.cpp  (+21 more)
cmake/: DownloadGoogleTest.cmake  FindGoogleTest.cmake
gacco/: execution_planner.h  gpu_execution_planner.cu  gpu_execution_planner.h
gacco/benchmarks/: tpcc.cpp  tpcc.h  tpcc_executor.h  tpcc_gpu_executor.cu  tpcc_gpu_executor.h  tpcc_gpu_submitter.cu  tpcc_gpu_submitter.h  tpcc_storage.h  tpcc_submitter.h  tpcc_table.h  tpcc_txn.h  tpcc_txn_gen.cpp  tpcc_txn_gen.h  ycsb.cpp  ycsb.h  ycsb_executor.h  ycsb_gpu_executor.cu  ycsb_gpu_executor.h  ycsb_gpu_submitter.cu  ycsb_gpu_submitter.h  ycsb_submitter.h  ycsb_txn.h
gpu_src/: CMakeLists.txt  epic_gpu.cu  epic_gpu.cuh  gpu_allocator.cu  gpu_allocator.cuh  gpu_allocator.h
tests/: CMakeLists.txt  test_execution_planner.cu  test_masstree_index.cpp  test_tpcc_key_ordering.cpp
tests/unit_tests/: CMakeLists.txt  test_gpu_table.cu  test_util_bitfield.cpp
